--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  BASE_IMG_NAME: !Lower ${{ github.repository }}
+  BASE_IMG_NAME: ${{ github.repository }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,6 +14,13 @@ jobs:
       contents: read
       packages: write
     steps:
+      
+    - name: set lower case owner name
+      run: |
+        echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+      env:
+      OWNER: '${{ github.repository_owner }}'
+      
     - name: Check out the repo
       uses: actions/checkout@v3
     - name: Log in to the container registry
