--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  BASE_IMG_NAME: !Lower ${{ github.repository }}
+  BASE_IMG_NAME: ${{ github.repository }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,6 +16,13 @@ jobs:
     steps:
     - name: Check out the repo
       uses: actions/checkout@v3
+
+    - name: set lower case owner name
+      run: |
+        echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+      env:
+        OWNER: '${{ github.repository_owner }}'
+      
     - name: Log in to the container registry
       uses: docker/login-action@v2
       with:
@@ -29,10 +36,10 @@ jobs:
       run: |
         cd backend && \
         docker build . --file Dockerfile \
-        --tag ghcr.io/${{ env.BASE_IMG_NAME }}/ft-backend:${{ steps.vars.outputs.sha_short }} \
-        --tag ghcr.io/${{ env.BASE_IMG_NAME }}/ft-backend:latest
+        --tag ghcr.io/${{ env.OWNER_LC }}/ft-backend:${{ steps.vars.outputs.sha_short }} \
+        --tag ghcr.io/${{ env.OWNER_LC }}/ft-backend:latest
     - name: Publish the images
       run: | 
-        docker push ghcr.io/${{ env.BASE_IMG_NAME }}/ft-backend:${{ steps.vars.outputs.sha_short }}
-        docker push ghcr.io/${{ env.BASE_IMG_NAME }}/ft-backend:latest
+        docker push ghcr.io/${{ env.OWNER_LC }}/ft-backend:${{ steps.vars.outputs.sha_short }}
+        docker push ghcr.io/${{ env.OWNER_LC }}/ft-backend:latest
 
