--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -14,15 +14,13 @@ jobs:
       contents: read
       packages: write
     steps:
-      
+    - name: Check out the repo
+      uses: actions/checkout@v3
     - name: set lower case owner name
       run: |
         echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
       env:
       OWNER: '${{ github.repository_owner }}'
-      
-    - name: Check out the repo
-      uses: actions/checkout@v3
     - name: Log in to the container registry
       uses: docker/login-action@v2
       with:
@@ -36,10 +34,10 @@ jobs:
       run: |
         cd frontend && \
         docker build . --file Dockerfile \
-        --tag ghcr.io/${{ env.BASE_IMG_NAME }}/ft-frontend:${{ steps.vars.outputs.sha_short }} \
-        --tag ghcr.io/${{ env.BASE_IMG_NAME }}/ft-frontend:latest
+        --tag ghcr.io/${{ env.OWNER_LC }}/ft-frontend:${{ steps.vars.outputs.sha_short }} \
+        --tag ghcr.io/${{ env.OWNER_LC }}/ft-frontend:latest
     - name: Publish the images
       run: | 
-        docker push ghcr.io/${{ env.BASE_IMG_NAME }}/ft-frontend:${{ steps.vars.outputs.sha_short }}
-        docker push ghcr.io/${{ env.BASE_IMG_NAME }}/ft-frontend:latest
+        docker push ghcr.io/${{ env.OWNER_LC }}/ft-frontend:${{ steps.vars.outputs.sha_short }}
+        docker push ghcr.io/${{ env.OWNER_LC }}/ft-frontend:latest
 
